ref imagenes, conclusiones, contribuciones y capturas saleae

--- a/LatexTFG/Capitulos/03Capitulo3.tex
+++ b/LatexTFG/Capitulos/03Capitulo3.tex
@@ -29,7 +29,7 @@ Para la correcta funcionalidad del proyecto, ha sido necesario configurar el har
 
 Tras haber realizado la elección del tema en el que se basaría nuestro trabajo de fin de grado, así como tras la elección del director que dirigiría dicho trabajo, estabamos ansiosos de empezar lo antes posible e introducirnos en la materia. Nos pareció apasionante la idea de poder desarrollar software para dispositivos empotrados, y aun más, sabiendo que el campo con el que estaría íntimamente relacionado sería la medicina. Tras los sabios consejos que nos transmitió Joaquín sobre que placa concreta usar, de que hardware podríamos disponer para la realización del proyecto, así como el software que se nos podría facilitar, estabamos decididos a comenzar. La placa hardware sobre la que desarrollariamos finalmente se trataba de una BeagleBone Black.
 
-Inicialmente, Joaquín nos proporcionó un pequeño proyecto sobre el que poder comenzar a trabajar y sentar las bases de un proyecto mucho mayor. Este proyecto además podía funcionar correctamente con diversos chips de Texas Instruments,concretamente nosotros escogimos el ADS1198. Este dispositivo electrónico es el encargado de realizar el muestreo y de realizar las conversiones con un \ac{ADC}. El código proporcionado era relativamente sencillo y fácil de entender. Se trataba de un programa realizado en C capaz de leer en espacio de usuario del dispositivo (en nuestro caso la BBB). Es decir, era capaz de recibir y tratar toda la información recibida de forma continua por el ADS1198. Hasta aquí todo es relativamente sencillo, gracias al módulo del kernel (para la comunicación SPI) del Debian de la BBB y al programa de usuario en C era posible gestionar casi toda la información recibida de las muestras simuladas y realizar el tratamiento pertinente.
+Inicialmente, Joaquín nos proporcionó un pequeño proyecto sobre el que poder comenzar a trabajar y sentar las bases de un proyecto mucho mayor. Este proyecto además podía funcionar correctamente con diversos chips de Texas Instruments,concretamente nosotros escogimos el ADS1198. Este dispositivo electrónico es el encargado de realizar el muestreo y de realizar las conversiones con un \ac{ADC}. El código proporcionado era relativamente sencillo y fácil de entender. Se trataba de un programa realizado en C capaz de leer en espacio de usuario del dispositivo (en nuestro caso la BBB). Es decir, era capaz de recibir y tratar toda la información recibida de forma continua por el ADS1198. Hasta aquí todo es relativamente sencillo; gracias al módulo del kernel (para la comunicación SPI) del Debian de la BBB y al programa de usuario en C era posible gestionar casi toda la información recibida de las muestras simuladas y realizar el tratamiento pertinente.
 
 
 
@@ -38,24 +38,31 @@ Inicialmente, Joaquín nos proporcionó un pequeño proyecto sobre el que poder com
 %-------------------------------------------------------------------
 \label{cap3:subsec:objetivos}
 
-En ciertos contextos, la pérdida de cierto número de muestras puede ser despreciable y no requerir mayor atención. Sin embargo, en este contexto concreto, al tratarse de procesamiento de señales en tiempo real, la pérdida de un cierto número de muestras, por pequeña que sea, puede ser decisiva a la hora de interpretar la información. El programa inicial escrito en C registraba una pérdida de muestras, que se podía determinar fácilmente hallando la diferencia entre el número de muestras generadas y el número de muestras leidas en el espacio de usuario. 
+En determinados contextos, la pérdida de cierto número de muestras puede ser despreciable y no requerir mayor atención. Sin embargo, en este contexto concreto, al tratarse de procesamiento de señales en tiempo real, la pérdida de un cierto número de muestras, por pequeña que sea, puede ser decisiva a la hora de interpretar la información. El programa inicial escrito en C registraba una pérdida de muestras, que se podía determinar fácilmente hallando la diferencia entre el número de muestras generadas y el número de muestras leídas en el espacio de usuario. 
+
 
 \figura{Vectorial/perdida1}{width=1\textwidth}{fig:perdida1}%
-{Detección de pérdida de una muestra a través del software de Saleae}
-
-En la [Fig \ref{fig:perdida1}] se puede apreciar perfectamente, gracias al software proporcionado por Saleae, la pérdida de una muestra completa. En la figura se muestran las cuatro señales características del protocolo SPI, ya nombradas en la sección \ref{cap2:subsec:bus}. Además de esas cuatro señales, se puede apreciar otra más, (que es la que aparece primero en la figura) denominada DRDY (Data Ready). El flanco de subida de esta señal indica que el ADS tiene una muestra preparada para ser tratada. Se puede apreciar perfectamente en la figura que la señal deja de ser procesada aproximadamente hacia la mitad de la duración del primer ciclo, e incluso, que la muestra inmediatamente posterior es perdida; tras el siguiente flanco de subida del DRDY ,hay inmediatamente un flanco de bajada; la muestra se ha perdido por completo. Es una forma muy visual de ilustrar al lector, de las consecuencias de trabajar con un sistema operativo que puede quitarle a un proceso la CPU (aunque sea por pequeños instantes de tiempo) en el momento que crea oportuno. En este caso concreto, la perdida de la CPU por parte del proceso, aunque sea durante in intervalo de tiempo muy recudido, conlleva la pérdida de muestras. 
-
+{Ciclo completo de muestreo reflejado por el software de Saleae}
 
 \figura{Vectorial/perdida2}{width=1\textwidth}{fig:perdida2}%
-{Pérdida de tiempo producida por pérdida de control sobre la CPU}
+{Ampliación de la [Fig \ref{fig:perdida1}]}
 
-En la [Fig \ref{fig:perdida2}] se ilustra aun con más detalle la pérdida de tiempo que produce para el proceso la interrupción de uso de la CPU por parte del sistema operativo. Concretamente se remarca en la figura el tiempo transcurrido entre el flanco de bajada de la señal DRDY hasta el flanco de subida de la misma señal. 
+En la [Fig \ref{fig:perdida1}] se puede apreciar perfectamente, gracias al software proporcionado por Saleae, un ciclo completo de muestreo. En la figura se muestran las cuatro señales características del protocolo SPI, ya nombradas en la sección \ref{cap2:subsec:bus}. Además de esas cuatro señales, se puede apreciar otra más, (que es la que aparece primero en la figura) denominada DRDY (Data Ready). El flanco de bajada de esta señal indica que el ADS tiene una muestra preparada para ser tratada. Cabe destacar que el programa original desarrollado en C hace uso únicamente de 2 canales (tal y como puede apreciarse en la figura), y sin embargo, para el desarrollo del presente proyecto se utilizan 8 canales distintos. El uso de más canales significaría mayor tiempo para recoger las muestras, y por lo tanto un riesgo mayor de sufrir pérdidas.
+
+El ciclo completo que se muestra en la [Fig \ref{fig:perdida1}], permite ilustrar de forma visual uno de los principales problemas del programa original. 
+
+Con el flanco de bajada del CS comienza la lectura secuencial de las muestras. El proceso de lectura concluye con el flanco de subida de la señal CS. El resto del tiempo hasta que hay otro flanco de bajada de la señal DRDY es tiempo que puede utilizarse para otros propósitos, como la transimión de las muestras, o la aplicación de algoritmos de delineación. Sin embargo, es en el segundo flanco de bajada de la señal DRDY cuando comienzan los problemas. Desde ese preciso instante hasta el flanco de bajada de la señal CS, no tiene lugar el proceso de lectura de las muestras. Todo el tiempo transcurrido entre los flancos de bajada de ambas señales es tiempo que se ha perdido.
+
+En la [Fig \ref{fig:perdida2}] puede apreciarse una visión ampliada del problema anteriormente comentado. En esta figura puede apreciarse con mayor claridad el tiempo que tarda el programa en leer una muestra desde que esta preparada (flanco de bajada de DRDY) hasta que comienza su lectura (flanco de bajada del CS). Este tiempo se pierde fundamentalmente debido a las planificaciones del propio sistema operativo. Inmediatamente tras el flanco de bajada de la señal DRDY, debería estar en ejecución el proceso encargado de detectar que hay una nueva muestra lista, sin embargo, el sistema operativo acapara la CPU para otros procesos. Una vez transcurrido un intervalo de tiempo reducido (del orden de milisegundos), el proceso recibe la CPU por parte del sistema operativo y comienza la lectura de la muestra. El tiempo que ha transcurrido entre el flanco de bajada del DRDY, y la asignación de la CPU al proceso anteriormente nombrado, ha sido pérdido.
 
 \figura{Vectorial/perdida3}{width=1\textwidth}{fig:perdida3}%
-{Pérdida de otra muestra reflejado por el software de Saleae}
+{Pérdida de una muestra reflejada por el software de Saleae}
 
-Y algo muy similar a las anteriores pérdidas se refleja perfectamente en la [Fig \ref{fig:perdida3}]. Las pérdidas de muestras reflejan un problema significativo en el programa original.
+En la [Fig \ref{fig:perdida3}] se ilustra con total claridad la pérdida de una muestra durante el proceso de lectura. Tras el primer flanco de bajada del DRDY se lee la muestra normalmente. Sin embargo, tras el segundo flanco de bajada de esta señal, se aprecia que en ningún momento hay flanco de bajada por parte de la señal CS. Transcurre tanto tiempo, que hay otro flanco de bajada de la señal DRDY (flanco de subida, y acto seguido de bajada), sin haberse producido la lectura de la muestra anterior; la muestra se ha perdido. Incluso tras este último flanco de bajada de la señal DRDY, ocurre algo muy similar a lo que comentabamos de la [Fig \ref{fig:perdida2}], ya que el tiempo que transcurre desde que hay una muestra lista, hasta que comienza el proceso de lectura de la misma, es bastante amplio.
 
+Es una forma muy visual de ilustrar al lector, de las consecuencias de trabajar con un proyecto en tiempo real (en este caso, lectura de muestras en tiempo real), y con un sistema operativo, que no es en tiempo real (que no esta diseñado para este tipo de aplicaciones). 
+
+%aquí termina esta parte
 
 El conjunto total de muestras que se perdía durante la transmisión de información era variable según distintas condiciones y factores externos que influyesen en el momento de la recopilación de información. Generalmente, si únicamente se ejecutaba el programa de usuario sin tener otras aplicaciones que consumiesen muchos recursos tanto de memoria como de cálculo computacional  en la BBB, la suma total de muestras perdidas podía encontrarse entre el 1 y el 2\% del total de muestras generadas. Sin embargo, si mientras se ejecutaba el programa en C, se ejecutaba algún otro programa que necesitase algún tipo de recurso para ser ejecutado, el número de muestras perdidas por la lectura en espacio de usuario podía dispararse. 
 
@@ -73,7 +80,7 @@ Sabiendo que el sistema operativo no tenia por qué garantizarnos la CPU para el 
 
 Teniendo en mente el problema anteriormente nombrado, era momento de buscar alternativas para solventarlo. La solución más inmediata que pasó por nuestra cabeza, fue la de sustituir la distribución Debian que utilizabamos en la BBB por una distribución que estuviese pensada para trabajar con análisis y tratamientos de datos en tiempo real. De esta forma, el sistema operativo no interrumpiría el proceso de análisis de muestras otorgando la CPU a otras tareas, y por consiguiente, presumiblemente no se produciría la pérdida de ninguna muestra. Sin embargo está solución parecía poco sostenible, ya que el hecho de recurrir a una distribución tan específica podría no ser accesible para todo tipo de usuarios y dispositivos, sin olvidar la dependencia que se generaría hacia ese sistema operativo concreto, impidiendo con la más absoluta de las certezas que funcionase éxitosamente en otros tipo de sistemas operativos (ya que por decirlo de algún modo, sería como un traje a medida). Sin embargo, si se utilizase una distribución genérica, como el Debian que usabamos en aquel momento, no habría problemas, ya que se trata de una distribución de proposito general a la que cualquier usuario podría recurrir de manera relativamente sencilla.
 
-Una vez estabamos decididos a mantener el sistema operativo, la solución tenía que encontrarse explorando otras posibles vías. Fue entonces, cuando se nos presentó la posibilidad de usar dos microprocesadores que tenía la BBB, cada uno denominado \ac{PRU}. Estos dos microprocesadores con los que contábamos, podían ser programados específicamente para tratar procesos de análisis y recopilación de muestras en tiempo real. De esta forma, aunque el sistema operativo decidiese ceder el uso de la CPU a otro proceso, las PRUs podrían seguir atendiendo los procesos en tiempo real, sin necesidad de requerir la CPU principal, por lo que la pérdida de muestras se reduciría totalmente gracias a estos pequeños procesadores que incorpora la placa. Se trata de dos procesadores de alta frecuencia (200MHz) de arquitectura de 32 bits que ofrecen la posibilidad a los desarrolladores de tratar con operaciones en tiempo real. En la [Fig \ref{fig:prus}] se puede apreciar un esquema hardware, que muestra la interaccioón de estos microprocesadores con el resto del dispositivo.
+Una vez estabamos decididos a mantener el sistema operativo, la solución tenía que encontrarse explorando otras posibles vías. Fue entonces, cuando se nos presentó la posibilidad de usar dos microprocesadores que tenía la BBB, cada uno denominado \ac{PRU}. Estos dos microprocesadores con los que contábamos, podían ser programados específicamente para tratar procesos de análisis y recopilación de muestras en tiempo real. De esta forma, aunque el sistema operativo decidiese ceder el uso de la CPU a otro proceso, las PRUs podrían seguir atendiendo los procesos en tiempo real, sin necesidad de requerir la CPU principal, por lo que la pérdida de muestras se reduciría totalmente gracias a estos pequeños procesadores que incorpora la placa. Se trata de dos procesadores de alta frecuencia (200MHz) de arquitectura de 32 bits que ofrecen la posibilidad a los desarrolladores de tratar con operaciones en tiempo real. En la [Fig \ref{fig:prus}]\footnote{Fuente original: \href{http://linuxgizmos.com/beaglebone-cape-eases-access-to-the-sitara-socs-pru/}{http://linuxgizmos.com/beaglebone-cape-eases-access-to-the-sitara-socs-pru/}} se puede apreciar un esquema hardware, que muestra la interaccioón de estos microprocesadores con el resto del dispositivo.
 
 \figura{Vectorial/prus}{width=1\textwidth}{fig:prus}%
 {Esquema hardware del PRU de la BBB}
@@ -123,7 +130,7 @@ Tal y como indicabamos en la sección \ref{cap2:subsec:bbb}, la BBB es un disposi
 \figura{Vectorial/pins}{width=1\textwidth}{fig:pins}%
 {Diagrama de conexiones físicas disponibles en una BBB}
 
-Cada uno de los pines físicos que incorpora la placa tiene una función determinada, en la [Fig \ref{fig:pins}] puede apreciarse alguna de las funcionalidades que podría tener cada uno de los pines\footnote{En la [Fig \ref{fig:pins}] solo se ilustran algunas de las posibilidades que ofrece cada pin; todas las funcionalidades de cada uno de los pines se pueden consultar en \href{http://elinux.org/Beagleboard:Cape\_Expansion\_Headers}{http://elinux.org/Beagleboard:Cape\_Expansion\_Headers}}. La BBB dispone de dos cabeceras completas (conocidas como P8 y P9) con multitud de pines disponibles, que permiten realizar conexiones físicas mediante cableado. La leyenda de la [Fig \ref{fig:pins}] muestra las funciones, o mejor dicho, las posibles funciones de los distintos pines:
+Cada uno de los pines físicos que incorpora la placa tiene una función determinada, en la [Fig \ref{fig:pins}] \footnote{Fuente original: \href{http://www.toptechboy.com/beaglevone-black-rev-c/beaglebone-black-lesson-1-understanding-beaglebone-black-pinout/}{http://www.toptechboy.com/beaglevone-black-rev-c/beaglebone-black-lesson-1-understanding-beaglebone-black-pinout/}} puede apreciarse alguna de las funcionalidades que podría tener cada uno de los pines\footnote{En la [Fig \ref{fig:pins}] solo se ilustran algunas de las posibilidades que ofrece cada pin; todas las funcionalidades de cada uno de los pines se pueden consultar en \href{http://elinux.org/Beagleboard:Cape\_Expansion\_Headers}{http://elinux.org/Beagleboard:Cape\_Expansion\_Headers}}. La BBB dispone de dos cabeceras completas (conocidas como P8 y P9) con multitud de pines disponibles, que permiten realizar conexiones físicas mediante cableado. La leyenda de la [Fig \ref{fig:pins}] muestra las funciones, o mejor dicho, las posibles funciones de los distintos pines:
 
 \begin{itemize}
 \item Para empezar, se han destacado en color rojo los pines de 5, 3 y 1.8 \textit{Voltios}, así como los pines de tierra (DGND). Hay que tener en cuenta que VDD\_ ADC es un pin de 1.8 \textit{V} que se usa para proporcionar una referencia para las funciones de lectura analógica.
@@ -165,7 +172,7 @@ Estos elementos opcionales son denominados \textit{overlays}. Al DT que se forma
 Para nuestro proyecto, fue necesaria la creación y personalización de un DTO; la base sobre la empezamos esta creación fue la que se utiliza en el capítulo 13 de Exploring BBB  \citep{exploringBBB}. A partir de ahi se realizaron diversas modificaciones y expansiones para obtener un DTO hecho a medida acorde con las necesidades del proyecto. El primer paso es indicar cuales van a ser los pines que se van a utilizar de forma exclusiva. A continuación se le asigna un modo a cada uno de los pines anteriormente indicado. De esta forma, el modo que se asigna, la señal que va a ir asociada a ese pin concreto y otra información complementaria puede ser encontrada en el código comentado. Cabe destacar que existen ciertas resticciones a la hora de asignar cierto modo a un pin determinado, ya que no a todos los pines se les puede asignar cualquier modo. En nuestro caso, solo determinados pines de la BBB tienen acceso a determinados modos que permiten interacciones tanto con la PRU0, como con la PRU1. Por ejemplo, el modo \texttt{pr1\_pru0\_pru\_r31\_7} solo puede ser asignado al pin P9\_25 (PRU0), y el modo \texttt{pr1\_pru1\_pru\_r31\_16} solo puede asignarse al pin P9\_26 (PRU1). Los dos ejemplos anteriormente comentados con puestos en práctica en nuestro DTO, aunque la lista de restricciones abarca muchos más modos y pines. Está información puede encontrarse más detallada en la [Fig \ref{fig:restricciones}]. Cabe destacar que este tipo de ficheros \texttt{.dts} sigue siempre una misma estructura en lo que al código respecta, aunque las posibles combinaciones de configuraciones hardware son prácticamente infinitas. El fichero DTO utilizado en el proyecto puede apreciarse en el Apéndice \ref{ap1:dto};
 
 \figura{Vectorial/restricciones}{width=1\textwidth}{fig:restricciones}%
-{Restricciones en la asignación de modos a pines relevantes para el proyecto}
+{Restricciones en la asignación de modos a pines relevantes para el proyecto \citep{exploringBBB}}
 
 %-------------------------------------------------------------------
 \subsection{Conexiones físicas}
@@ -265,7 +272,7 @@ El software más destacado que se ejecuta en la BBB es el siguiente:
 \end{itemize}
 
 \figura{Vectorial/pru}{width=0.8\textwidth}{fig:pru}%
-{Bancos de memoria del PRU}
+{Bancos de memoria del PRU \citep{exploringBBB}}
 
 La relación de este ecosistema es bastante simple. El programa principal \texttt{medcape.c}, el cual está programado para ejecutarse según enciende la BBB, es el encargado de realizar las inicializaciones pertinentes para que funcione el intercambio de información, de mapear ciertas regiones de memoria, de ejecutar el binario principal\footnote{Código ensamblador compilado que ejecuta el PRU, concretamente el fichero \texttt{PRUADC.p}}, así como de capturar y generar interrupciones hacia el código que ejecuta el PRU. De forma paralela a la ejecución del programa en C, se ejecuta el programa en ensamblador ya que se da la orden de ejecutar el binario desde el propio programa en C. 
 
@@ -355,7 +362,7 @@ Todo este proceso se refleja en el código ensamblador ilustrado con detalle en e
 \label{cap3:sec:lectura}
 
 \figura{Vectorial/octave}{width=1\textwidth}{fig:octave}%
-{Representación de la traza del fichero binario en Octave}
+{Representación de la traza del fichero binario en Matlab}
 
 Como ya se adelantaba en la sección \ref{cap3:sec:guardado}, se ha desarrollado un programa en C encargado de leer la información de las muestras almacenadas en el banco de memoria del PRU, para posteriormente guardarla en un fichero (se trata de un archivo binario) \footnote{Este fichero binario está limitado por software a un tamaño máximo de 50MB}. La traza del archivo binario puede ser representada mediante ciertos programas como Matlabs u Octave. La [Fig \ref{fig:octave}] muestra la representación de este binario mediante el programa de escritorio Octave (versión para linux).
 
