--- a/LatexTFG/Capitulos/05Capitulo5.tex
+++ b/LatexTFG/Capitulos/05Capitulo5.tex
@@ -26,13 +26,23 @@ En este capítulo se exponen los resultados finales del proyecto, así como se pre
 %-------------------------------------------------------------------
 \label{cap5:sec:conclusiones}
 
-El trabajo aquí presentado se enmarca dentro del campo de la medicina. Dentro de este amplio campo podemos encontrar todo tipo de soluciones y aplicaciones que tratan de facilitar la vida al usuario, en este caso concreto, al paciente.
+El trabajo aquí presentado se enmarca dentro del campo de la medicina. Dentro de este amplio campo podemos encontrar todo tipo de soluciones y aplicaciones que tratan de facilitar la vida al usuario, en este caso concreto, al paciente. El presente proyecto trata de ser una de estas soluciones.
 
-Tras la realización del proyecto, se ha obtenido un producto final que podría ser considerado como un prototipo. Este prototipo podría ser adaptado y mejorado con el fin de adaptarse aun más a las necesidades tanto de pacientes como de doctores. Consideramos que el producto final podría ser probado en un contexto médico real con altas posibilidades de aplicarse exitosamente. De esta forma, podría el proyecto final ir incorporándose poco a poco al mundo sanitario.
+Durante el desarrollo del trabajo, se han realizado con éxito las siguientes tareas:
+
+\begin{itemize}
+\item Recogida de datos en tiempo real de sensor de ECG de 8 canales a una frecuencia de 1KHz.
+\item Almacenamiento y transmisión por Bluetooth de las muestras, por parte de la BBB.
+\item Recepción mediante Bluetooth y presentación en pantalla de los datos mediante una aplicación Android.
+\item Tratamiento de la señal en la aplicación Android, y utilización de un algoritmo de delineación con el fin de detectar las PPM.
+\item Envío de datos a un servidor mediante conexión a internet.
+\item Envío de datos desde un servidor a múltiples dispositivos, a través de internet.
+\item Presentación de datos y señalización de eventos significativos en dispositivos de vigilancia médica.
+\end{itemize}
 
 Entre los posibles usos reales que podría adquirir el resultado de este trabajo en el futuro, podemos destacar su uso en hospitales, en pacientes con movilidad reducida con ciertas incapacidades que impidan su comparecencia en el hospital, e incluso en personas mayores con alto riesgo de padecer enfermedades cardíacas con el fin de prevenirlas y tratarlas de forma precoz.
 
-En definitiva, gracias a la realización de este trabajo, nos ha sido posible adentrarnos mínimamente en el campo de la medicina. Consideramos que todo lo relacionado con la medicina es un acontecimiento emocionante, ya que cualquier avance o mejora que se desarrolle, por mínimo que sea, es capaz de mejorar potencialmente la calidad de vida de multitud de personas. Aunque este sea el primer proyecto importante que realizamos íntimamente relacionado con este campo, no nos cabe duda de que no será el último.
+En definitiva, gracias a la realización de este trabajo, nos ha sido posible adentrarnos mínimamente en el campo de la medicina. Consideramos que todo lo relacionado con la medicina es un acontecimiento emocionante, ya que cualquier avance o mejora que se desarrolle, por mínimo que sea, es capaz de mejorar potencialmente la calidad de vida de multitud de personas; precisamente por ese motivo surge el proyecto que aquí se presenta.
 
 %-------------------------------------------------------------------
 \section{Conclusions}
