--- a/LatexTFG/latex.bib
+++ b/LatexTFG/latex.bib
@@ -169,5 +169,22 @@ bajo coste para Raspberry Pi},
   year = 	 {2013},
 }
 
+@Book{onda,
+  author =	 {Wikipedia},
+  title =	 {Electrocardiograma},
+  publisher = 	 {Versión electrónica},
+  year = 	 {2017},
+  webpage = {https://es.wikipedia.org/wiki/Electrocardiograma},
+  lastaccess = {Junio, 2017},
+}
+
+@Book{spi,
+  author =	 {Wikipedia},
+  title =	 {Serial Peripheral Interface},
+  publisher = 	 {Versión electrónica},
+  year = 	 {2017},
+  webpage = {https://es.wikipedia.org/wiki/Serial_Peripheral_Interface},
+  lastaccess = {Junio, 2017},
+}
 
 
