--- a/LatexTFG/Capitulos/02Capitulo2.tex
+++ b/LatexTFG/Capitulos/02Capitulo2.tex
@@ -57,7 +57,7 @@ La estructura habitual de un ECG [Fig \ref{fig:ondaecg}] habitualmente está form
 \end{itemize}
 
 \figura{Vectorial/ecg}{width=.7\textwidth}{fig:ondaecg}%
-{Estructura habitual de la señal ECG durante un ciclo cardíaco.}
+{Estructura habitual de la señal ECG durante un ciclo cardíaco \citep{onda}}
 
 Habitualmente este tipo de señales se encuentran dentro de un rango determinado de amplitudes, que generalmente abarca desde los 0.5\textit{mV} hasta los 5\textit{mV}, existiendo además una componente continua causada por el contacto existente entre los electrodos y la piel. 
 
@@ -74,7 +74,7 @@ Puede presentarse ruido en la señal simplemente debido a la luz tanto natural co
 \figura{Vectorial/corazon}{width=.7\textwidth}{fig:corazon}%
 {Estructura anatómica del corazón humano}
 
-El corazón está constituido por cuatro cámaras diferenciadas: dos aurículas (izquierda y derecha) y dos ventrículos (izquierdo y derecho) como puede apreciarse en la [Fig \ref{fig:corazon}]
+El corazón está constituido por cuatro cámaras diferenciadas: dos aurículas (izquierda y derecha) y dos ventrículos (izquierdo y derecho) como puede apreciarse en la [Fig \ref{fig:corazon}] \footnote{Fuente original: \href{http://respuestas.tips/cuales-son-las-partes-que-componen-el-corazon-humano/}{http://respuestas.tips/cuales-son-las-partes-que-componen-el-corazon-humano/}}.
 
 
 Su funcionamiento sigue siempre un mismo ciclo que se repite una y otra vez: la aurícula derecha recibe la sangre venosa del cuerpo a través de la vena cava superior y la envía al ventrículo derecho. Para que dicha sangre pueda oxigenarse, el ventrículo derecho la envía a través de la arteria pulmonar a los pulmones, retornando al corazón, a través de la vena pulmonar, a la aurícula izquierda. Para finalizar con el ciclo, la sangre pasa de dicha aurícula al ventrículo izquierdo, el cual la distribuye por todo el cuerpo gracias a la arteria aorta, para volver posteriormente a la aurícula derecha y así cerrar el ciclo.
@@ -91,7 +91,7 @@ Para que este ciclo periódico funcione de manera correcta, síncrona y con total 
 
 El proceso físico a traves del cual se realiza el procedimiento de registro y se obtiene el ECG consiste en la medición de la actividad eléctrica del corazón entre distintos puntos corporales, ya que, mientras que el corazón pasa por los estados de polarización y despolarización, el cuerpo en su conjunto se comporta como un volumen conductor, propagando la corriente eléctrica.
 
-El equipo de registro consta de una serie de electrodos, que se conectan a la piel del paciente y a un equipo de registro. Estos electrodos se colocan en unas posiciones predeterminadas y universales, lo que permite obtener el registro del sistema de la forma más precisa y exacta posible. En la [Fig \ref{fig:electrodos}] se ilustran los puntos más importantes a tener en cuenta, a la hora de colocar los electrodos.
+El equipo de registro consta de una serie de electrodos, que se conectan a la piel del paciente y a un equipo de registro. Estos electrodos se colocan en unas posiciones predeterminadas y universales, lo que permite obtener el registro del sistema de la forma más precisa y exacta posible. En la [Fig \ref{fig:electrodos}] \footnote{Fuente original: \href{https://es.pinterest.com/bvs2425709/nursing/}{https://es.pinterest.com/bvs2425709/nursing/}} se ilustran los puntos más importantes a tener en cuenta, a la hora de colocar los electrodos.
 
 
 %-------------------------------------------------------------------
@@ -120,7 +120,7 @@ Tras la obtención de un ECG, se tendrá un registro completo acerca del tamaño, l
 
 Para llevar a cabo el correcto desarrollo del trabajo que se expone en la presente memoria, ha sido necesaria la investigación y el desarrollo de diversas tecnologías que se expondrán a continuación, así como el estudio y la asimilación de tecnologías ya existentes con el fin de adaptarlas y modificarlas para el proyecto desarrollado.
 
-Como módulo de procesamiento se ha utilizado una placa BeagleBone Black (puede apreciarse una visión general de esta placa en la [Fig \ref{fig:bbb}]), aprovechando la gran comunidad de desarrolladores existentes gracias a la cual fue posible resolver los problemas que fueron surgiendo durante el desarrollo, y aprovechando también el bajo costo de la placa así como la multitud de posibilidades que ofrece. En cuanto al tratamiento y captura de señales se ha utilizado el ADS1198 de Texas Intruments, que permite unas velocidades de captura suficientemente elevadas para este tipo de desarrollos además de tener un coste asequible. Con motivos de depuración durante el tratamiento de las distintas señales que se han obtenida, se ha utilizado Saleae Logic, un analizador lógico \ac{USB} que cuenta con 8 canales para cada posible señal. Como método de comunicación entre los dispositivos se ha recurrido a una interfaz \ac{SPI}, ya que es la única opción que ofrece el ADS.
+Como módulo de procesamiento se ha utilizado una placa BeagleBone Black (puede apreciarse una visión general de esta placa en la [Fig \ref{fig:bbb}]) \footnote{Fuente original: \href{http://blog.sanatanatech.com/}{http://blog.sanatanatech.com/}}, aprovechando la gran comunidad de desarrolladores existentes gracias a la cual fue posible resolver los problemas que fueron surgiendo durante el desarrollo, y aprovechando también el bajo costo de la placa así como la multitud de posibilidades que ofrece. En cuanto al tratamiento y captura de señales se ha utilizado el ADS1198 de Texas Intruments, que permite unas velocidades de captura suficientemente elevadas para este tipo de desarrollos además de tener un coste asequible. Con motivos de depuración durante el tratamiento de las distintas señales que se han obtenida, se ha utilizado Saleae Logic, un analizador lógico \ac{USB} que cuenta con 8 canales para cada posible señal. Como método de comunicación entre los dispositivos se ha recurrido a una interfaz \ac{SPI}, ya que es la única opción que ofrece el ADS.
 
 %-------------------------------------------------------------------
 \subsection{BeagleBone Black}
@@ -157,7 +157,7 @@ La plataforma BeagleBone y sus placas computadoras han evolucionado progresivame
 \figura{Vectorial/Features}{width=1\textwidth}{fig:feat}
 {Especificación hardware BeagleBone Black}
 
-La especificación completa de las características de la BBB se muestran con más detalle en la [Fig. \ref{fig:feat}] \citep{BBBsite}
+La especificación completa de las características de la BBB se muestran con más detalle en la [Fig \ref{fig:feat}] \citep{BBBsite}.
 
 
 %-------------------------------------------------------------------
@@ -170,7 +170,7 @@ El bus SPI (del inglés Serial Pripheral Interface) es un estándar de comunicació
 En la transferencia de datos se implican distintos dispositivos que desempeñan diferentes funciones. Existe un dispositivo principal, más conocido como maestro, y otro  dispositivo denominado esclavo (como mínimo debe existir uno). El maestro es responsable de enviar las señales de reloj y de seleccionar  al esclavo activo en cada instante de la comunicación. 
 
 \figura{Vectorial/spi}{width=0.7\textwidth}{fig:spi}
-{Estándar de comunicación SPI}
+{Estándar de comunicación SPI \citep{spi}}
 
 Las diferentes líneas existentes en este estándar de comunicación son las siguientes [Fig \ref{fig:spi}]:
 
@@ -187,7 +187,7 @@ El dispositivo maestro debe conocer las características de cada esclavo implicad
 
 \begin{itemize}
   \item \textbf{Frecuencia máxima de transferencia}: La velocidad de comunicación  con cada dispositivo estará limitada por este valor, haciendo imposible enviar o recibir datos a mayor velocidad.
-   \item \textbf{Polaridad} (CPOL): Determina la polaridad del reloj [Fig \ref{fig:spi3}].
+   \item \textbf{Polaridad} (CPOL): Determina la polaridad del reloj [Fig \ref{fig:spi3}] \footnote{Fuente original: \href{https://electricimp.com/docs/resources/spi/}{https://electricimp.com/docs/resources/spi/}}.
    \item \textbf{Fase} (CPHA): Determina el flanco de reloj en el que se desencadenará la escritura [Fig \ref{fig:spi3}].
 \end{itemize}
 
@@ -217,7 +217,7 @@ Internamente el ADS1198 cuenta con 25 registros que permiten al usuario configur
 Para el propósito del presente proyecto, se ha utilizado un kit de desarrollo, en el que se incluye el chip integrado en una placa que permite configurar la forma de alimentación o tener acceso a las entradas de datos de forma más cómoda y sencilla.
 
 \figura{Vectorial/ads}{width=1\textwidth}{fig:ads}
-{Diagrama de funcionamiento interno ADS1198}
+{Diagrama de funcionamiento interno ADS1198 \citep{ads1198}}
 
 %-------------------------------------------------------------------
 \subsubsection{Características técnicas}
@@ -272,7 +272,7 @@ Entre sus principales características, cabe destacar las siguientes:
 \figura{Vectorial/sim}{width=1\textwidth}{fig:sim}%
 {Simulador de ECG utilizado durante el desarrollo del proyecto}
 
-Durante gran parte del desarrollo del proyecto se ha recurrido a un simulador de pacientes similar al que puede apreciarse en la [Fig \ref{fig:sim}].
+Durante gran parte del desarrollo del proyecto se ha recurrido a un simulador de pacientes similar al que puede apreciarse en la [Fig \ref{fig:sim}] \footnote{Fuente original: \href{http://www.medicalexpo.com/prod/he-instruments/product-112471-745933.html}{http://www.medicalexpo.com/prod/he-instruments/product-112471-745933.html}}.
 
 El simulador de ECG portátil es capaz genera señales cardíacas en 12 derivaciones para el ensayo de desempeño en equipamiento de diagnóstico basado en ECG, tal como monitores de paciente de terapia intensiva, electrocardiógrafos y grabadores Holter.
 
@@ -315,7 +315,7 @@ Es un elemento fundamental en cualquier desarollo en el que haya hardware y circ
 %-------------------------------------------------------------------
 \label{cap2:subsec:otros}
 
-Para la medición de la frecuencia cardíaca se han utilizado dos formas de medición distintas. En primer lugar un POLAR Soft strap como el que puede verse en la [Fig \ref{fig:cinturon}], que permite una medición confortable gracias al acabado elástico que ofrece el producto. Por otra parte se han utilzado electrodos de botón pregelizado como los que pueden observarse en la [Fig \ref{fig:pegatinas}]. Las pegatinas han aportado un mejor resultado debido a la mayor ausencia de ruido que presenta la captación final de la señal.
+Para la medición de la frecuencia cardíaca se han utilizado dos formas de medición distintas. En primer lugar un POLAR Soft strap como el que puede verse en la [Fig \ref{fig:cinturon}]  \footnote{Fuente original: \href{https://bike-dump.nl/Shop/Artikel/2030/Polar-Soft-Strap}{https://bike-dump.nl/Shop/Artikel/2030/Polar-Soft-Strap}}, que permite una medición confortable gracias al acabado elástico que ofrece el producto. Por otra parte se han utilzado electrodos de botón pregelizado como los que pueden observarse en la [Fig \ref{fig:pegatinas}] \footnote{Fuente original: \href{http://hospiinnova.com/49-ecg}{http://hospiinnova.com/49-ecg}}. Las pegatinas han aportado un mejor resultado debido a la mayor ausencia de ruido que presenta la captación final de la señal.
 
 \figura{Vectorial/multimetro}{width=0.7\textwidth}{fig:multimetro}
 {Multímetro modelo 830L}
